# ek-loop-py

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
controller/: .gitignore  README.md  config.sample.json  controller.py  fan_curve.py  main.py  ohm_wrapper.py
device/: ek.py
ek_loop_py/: __init__.py  __main__.py
ek_loop_py/device/: ek.py
ek_loop_py/models/: __init__.py  sensor.py
ek_loop_py/services/: fan.py  rgb.py  sensor.py
models/: __init__.py  fan.py  rgb.py  sensor.py
services/: fan.py  rgb.py  sensor.py
