[tool.isort]
force_single_line = true
profile = "black"

[tool.poetry]
name = "ek_loop_py"
version = "0.0.1"
description = "Library for controlling EK-Loop Connect devices"
authors = ["NiceAesth <nice@aesth.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyusb = "*"
pydantic = "*"
libusb-package = "^1.0.26.2"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
mypy = "^1.8.0"
pythonnet = "^3.0.3"
pyuac = "^0.0.3"
pywin32 = "^306"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
